--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <video id="webcam" autoplay playsinline></video>
         <canvas class="output_canvas" id="output_canvas"></canvas>
       </div>
+      <div class="pinchcounter">
+        <p><span id="pinchCounter"></span></p>
+      </div>
     </div>
     <p id="gesture_output" class="output">
       <script type="module" src="/src/main.ts"></script>
