--- a/info.html
+++ b/info.html
@@ -28,14 +28,8 @@
             </div>
   
             <div class="instructions">
-              <h2>📌 Instructies</h2>
-              <ul>
-                <li>🔹 Er zijn <strong>3 levels</strong></li>
-                <li>🔹 Elk level heeft een <strong>andere vorm</strong></li>
-                <li>🔹 Sleep de juiste vorm in het juiste gat</li>
-                <li>🔹 Leer meer over de richting <strong>IMD</strong></li>
-                <li>🔹 Na 60 seconden keer je terug naar de home page</li>
-              </ul>
+              <h2>📌 Web Pagina:</h2>
+              <img class="qr_image" src="./public/qr.png" alt="qr code">
             </div>
           </div>
         </div>
