logo's en sound

--- a/puzzle.html
+++ b/puzzle.html
@@ -47,8 +47,11 @@
           <p><span id="pinchCounter"></span></p>
         </div>
       </div>
+      <div id="level-message" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0, 0, 0, 0.7); color: white; padding: 20px; border-radius: 10px; text-align: center; z-index: 1000;">
+        Nice job, now level 2!
+      </div>
     </div>
     <p id="gesture_output" class="output"></p>
     <script type="module" src="/src/puzzle.ts"></script>
   </body>
-</html>
+</html>  
