--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
   </head>
 
   <body class="primary-bg">
-    <div class="container">
+    <div class="container info">
       <div>
         <h1 class=" home-title">
           Keuzetraject van Bachelor Grafische en Digitale Media
