quiz concept, logica toevoegen

--- a/puzzle.html
+++ b/puzzle.html
@@ -25,9 +25,10 @@
         </div>
         <div class="webcam-wrapper">
           <div class="overlay">
-            <div class="vierkant hole" id="hole-square"></div>
-            <div class="cirkel hole" id="hole-circle"></div>
-            <div class="driehoek hole" id="hole-triangle"></div>
+            <!-- kan shapes in gezet worden -->
+             <div class="answer answer-a mdc-typography--headline3" id="answer-a"><p>A</p></div>
+             <div class="answer answer-b mdc-typography--headline3" id="answer-b"><p>B</p></div>
+             <div class="answer answer-c mdc-typography--headline3" id="answer-c"><p>C</p></div>
           </div>
           <div id="ar-layers" class="relative">
             <video id="webcam-puzzle" autoplay playsinline></video>
@@ -37,9 +38,7 @@
         </div>
       </div>
       <div class="shapes">
-        <div class="square" id="shape-square"></div>
-        <div class="triangle" id="shape-triangle" style="display: none"></div>
-        <div class="circle" id="shape-circle" style="display: none"></div>
+
         <!-- New shape for circle, initially hidden -->
       </div>
       <div class="grid-item-2">
