--- a/home.html
+++ b/home.html
@@ -36,9 +36,9 @@
           <div class="instructions">
             <h2>📌 Instructies</h2>
             <ul>
-              <li>🔹 Er zijn <strong>3 levels</strong></li>
-              <li>🔹 Elk level heeft een <strong>andere foto</strong></li>
-              <li>🔹 knijp in de foto om naar het volgende level te gaa</li>
+              <li>🔹 Er zijn <strong>5 quiz vragen over IMD</strong></li>
+              <li>🔹 Er zijn 3 mogelijke antwoorden <strong>A, B en C</strong></li>
+              <li>🔹 knijp in de A, B of C om je antwoord te bevestigen</li>
               <li>🔹 Leer meer over de richting <strong>IMD</strong></li>
               <li>🔹 Na 60 seconden keer je terug naar de home page</li>
             </ul>
